// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This file contains protobuf messages for interacting with the Vault service
// OnePlatform API.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.chromium.components.trusted_vault.proto";

option optimize_for = LITE_RUNTIME;

package trusted_vault_pb;

message AsymmetricKeyPair {
  bytes public_key = 1;
  bytes wrapped_private_key = 2;
  bytes wrapping_key = 3;
}

message ApplicationKey {
  string key_name = 1;
  AsymmetricKeyPair asymmetric_key_pair = 4;
}

message VaultParameters {
  bytes backend_public_key = 1;
  bytes counter_id = 2;
  int32 max_attempts = 3;
  bytes vault_handle = 4;
}

message Vault {
  VaultParameters vault_parameters = 2;
  bytes vault_metadata = 3;
  bytes recovery_key = 4;
  repeated ApplicationKey application_keys = 5;
}

message ChromeOsMetadata {
  bytes device_id = 1;
  string chrome_os_version = 2;
}

message UpdateVaultRequest {
  Vault vault = 3;
  oneof os_metadata {
    ChromeOsMetadata chrome_os_metadata = 7;
  }
}
